@@ -3,7 +3,7 @@ Package: dplR
 Type: Package
 Title: Dendrochronology Program Library in R
 Version: 1.7.0
-Date: 2018-12-12
+Date: 2018-02-08
 Authors@R: c(person("Andy", "Bunn", role = c("aut", "cph",
         "cre", "trl"), email = "andy.bunn@wwu.edu"), person("Mikko",
         "Korpela", role = c("aut", "cph", "trl")), person("Franco", "Biondi",
@@ -13,9 +13,7 @@ Authors@R: c(person("Andy", "Bunn", role = c("aut", "cph",
         person("Christian", "Zang", role = c("aut", "cph")),
         person("Allan", "Buras", role = "ctb"), person("Jacob",
         "Cecile", role = "ctb"), person("Manfred", "Mudelsee", role =
-        "ctb"), person("Michael", "Schulz", role = "ctb"),
-        person("Darwin", "Pucha-Cofrep", role = c("aut", "cph")),
-        person("Jakob", "Wernicke", role = c("aut", "cph")))
+        "ctb"), person("Michael", "Schulz", role = "ctb"))
 Author: Andy Bunn [aut, cph, cre, trl], Mikko Korpela [aut, cph, trl], Franco Biondi [aut, cph], Filipe Campelo [aut, cph], Pierre Mérian [aut, cph], Fares Qeadan [aut, cph], Christian Zang [aut, cph], Allan Buras [ctb], Jacob Cecile [ctb], Manfred Mudelsee [ctb], Michael Schulz [ctb], Darwin Pucha-Cofrep [aut, cph], Jakob Wernicke [aut, cph]
 Copyright: Authors and file inst/COPYRIGHTS
 Maintainer: Andy Bunn <andy.bunn@wwu.edu>
@@ -23,8 +21,7 @@ Depends: R (>= 2.15.2)
 Imports: graphics, grDevices, grid, stats, utils, lattice (>= 0.13-6),
         Matrix (>= 1.0-3), digest (>= 0.2.3), matrixStats (>= 0.50.2),
         png (>= 0.1-2), R.utils (>= 1.32.1), stringi (>= 0.2-3),
-        stringr (>= 0.4), XML (>= 2.1-0), plyr (>= 1.8), animation (>=
-        2.0-2), signal
+        stringr (>= 0.4), XML (>= 2.1-0), plyr (>= 1.8), signal
 Suggests: Biobase, Cairo (>= 1.5-0), dichromat (>= 1.2-3), foreach,
         forecast (>= 3.6), gmp (>= 0.5-5), iterators, knitr,
         RColorBrewer, testthat (>= 0.8), tikzDevice, waveslim
