@@ -1,0 +1,16 @@
+\encoding{UTF-8}
+\name{dplR-defunct}
+\alias{dplR-defunct}
+\alias{plotRings}
+\title{
+  Defunct functions in dplR
+}
+\description{
+  These are functions no longer included in dplR
+}
+\details{
+  \tabular{ll}{
+    Function: \tab plotRings\cr
+  }
+}
+\keyword{ help }
