@@ -1,5 +1,12 @@
 * CHANGES IN dplR VERSION 1.7.0
 
+
+File: plotRings.R and .Rd
+----------------
+
+- Making plotRings defunct as there were too maby issues with the animation library and especially imageMajick integrating smoothly for some users. Suggested to Darwin that he make plotRings a stand alone library.
+
+
 File: xdate-dplR.Rnw
 ----------------
 
